infra-ci-cd/modules/security_group/openvpn_sg.tf
resource "aws_security_group" "openvpn_sg" {
  name        = "openvpn_sg"
  description = "Security group for OpenVPN"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 1194
    to_port     = 1194
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "openvpn_sg_id" {
  value = aws_security_group.openvpn_sg.id
}
