infra-ci-cd/modules/security_group/wireguard_sg.tf
resource "aws_security_group" "wireguard_sg" {
  name        = "wireguard_sg"
  description = "Security group for wireguard"
  vpc_id      = var.vpc_id

  ingress {
    description = "From private subnet"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["10.0.1.0/24"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 51820
    to_port     = 51820
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "wireguard_sg_id" {
  value = aws_security_group.wireguard_sg.id
}
